fix: fix source src

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
     <div class="main-wrapper">
         <div class="main-wrapper__bg">
             <picture>
-                <source media="(max-width: 376px)" src="assets/images/bg-small.png"
-                        srcset="assets/images/bg-small@2x.png 2x, assets/images/bg-small@3x.png 3x"/>
+                <source media="(max-width: 376px)"
+                        srcset="assets/images/bg-small.png assets/images/bg-small@2x.png 2x, assets/images/bg-small@3x.png 3x"/>
                 <source media="(min-width: 377px)"
                         srcset="assets/images/bg.png, assets/images/bg@2x.png 2x, assets/images/bg@3x.png 3x"/>
                 <img class="main-wrapper__bg__img" src="assets/images/bg.png" alt="bg">
